add useful methods to project manager class

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </ul>
     </aside>
     <main id="content">
+        <dialog id="pop-up-modal">
+            <div>Error</div>
+        </dialog>
         <div class="page" id="projects-page">
             <dialog id="new-project-modal">
                 <form id="new-project-form">
@@ -66,36 +69,7 @@
                 </div>
             </header>
             <div id="project-list">
-                <!-- <div class="project-card">
-                    <div class="card-header">
-                        <p class="project-icon">HC</p>
-                        <div>
-                            <h5 class="card-header-name">Hospital center</h5>
-                            <p class="card-header-desc">Community Hospital located at downtown</p>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <div class="card-property">
-                            <p style="color: #969696;">Status</p>
-                            <p>Active</p>
-                        </div>
-                        <div class="card-property">
-                            <p style="color: #969696;">Status</p>
-                            <p>Active</p>
-                        </div>
-                        <div class="card-property">
-                            <p style="color: #969696;">Status</p>
-                            <p>Active</p>
-                        </div>
-                        <div class="card-property">
-                            <p style="color: #969696;">Status</p>
-                            <p>Active</p>
-                        </div>
-                        
-    
-                    </div>
-                </div> -->
-            </div>
+                </div>
         </div>
         <div class="page, hidden" id="project-details">
             <header>
