add icon content and color

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div  style="display: flex; flex-direction: column;">
                   <div class="dashboard-card">
                     <div class="dashboard-card-header">
-                        <p class="project-icon">HC</p>
+                        <p data-project-info='project-icon' class="project-icon">HC</p>
                         <button class="blank-btn">Edit</button>
                     </div>
                     <div style="margin: 5px 20px;">
